fix(shop): replace list view with cards on mobile
Make toolbar transparent on opened products
Fix query ordering bug

--- a/src/app/shared/sidenav/sidenav.component.scss
+++ b/src/app/shared/sidenav/sidenav.component.scss
@@ -54,7 +54,7 @@
   min-height: 100vh;
   &.position-absolute {
     position: absolute;
-    width: fill-available;
+    width: stretch;
   }
   main {
     flex: 1 0 auto;
